deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubelet-rubber-stamp
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kubelet-rubber-stamp
  template:
    metadata:
      labels:
        name: kubelet-rubber-stamp
    spec:
      serviceAccountName: kubelet-rubber-stamp
      tolerations:
        - effect: NoSchedule
          operator: Exists
      nodeSelector:
        node-role.kubernetes.io/master: ""
      priorityClassName: system-cluster-critical
      containers:
        - name: kubelet-rubber-stamp
          image: quay.io/kontena/kubelet-rubber-stamp-amd64:latest
          imagePullPolicy: Always
